# subfinder

./: .gitignore  API.md  LICENSE  MANIFEST.in  Pipfile  README.md  SubFinder.py  changeEncoding.py  check_before_release.bat  check_before_release.sh  pyproject.toml  release.sh  requirement.md  requirements.txt  rmsubtitles.py  setup.cfg  setup.py  tox.ini
app/: .gitignore  README.md  SubFinder.macos.spec  SubFinder.spec  SubFinder.win.spec  app.py  build.bat  build.sh  make_spec.bat  make_spec.sh  requirements.txt  setup.py
app/hooks/: hook-gevent.__hub_local.py
assets/: subfinder.reg
examples/: custom_subsearcher.py
macos/subfinder.workflow/Contents/: Info.plist  document.wflow
scripts/: subfinder  subfinder.py
subfinder/: __init__.py  exceptions.py  run.py  run_gevent.py  run_thread.py  subfinder.py  subfinder_gevent.py  subfinder_thread.py  subsearcher.py  utils.py
subfinder/subsearcher/: __init__.py  exceptions.py  shooter.py  subhd.py  subsearcher.py  zimuku.py  zimuzu.py
subfinder/tools/: compressed_file.py
tests/: conftest.py  test_shooter.py  test_subfinder.py  test_subhd.py  test_subsearcher.py  test_zimuku.py  test_zimuzu.py
windows/: subfinder.reg
windows_register_files/: dir_background.reg  dir_shell.reg  file_shell.reg
