[tool.poetry]
name = "subfinder"
version = "1.1.3"
description = "subfinder -- a general finder for subtitles"
authors = ["ausaki <ljm51689@gmail.com>"]
repository = "https://github.com/ausaki/subfinder/"
readme = "README.md"
keywords = ["subtitle", "subfinder", "shooter", "zimuku"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
requests = "*"
bs4 = "^0.0.1"
lxml = "*"
gevent = "^1.4.0"
rarfile = "*"
six = "*"

[tool.poetry.dev-dependencies]
tox = "*"
twine = "*"
pyinstaller = "*"
autopep8 = "*"
rope = "*"
pytest = "*"

[tool.poetry.scripts]
subfinder = "subfinder.run_gevent:run"
subutils = "subfinder.utils:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
