[tool.poetry]
name = "subfinder"
version = "2.0.2"
description = "subfinder -- a general finder for subtitles"
authors = ["ausaki <ljm51689@gmail.com>"]
repository = "https://github.com/ausaki/subfinder/"
readme = "README.md"
keywords = ["subtitle", "subfinder", "shooter", "zimuku"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5.0"
requests = "*"
lxml = "*"
rarfile = "*"
six = "*"
gevent = "^21.1.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
tox = "*"
twine = "*"
pyinstaller = "*"
autopep8 = "*"
rope = "*"
pytest = "*"

[tool.poetry.scripts]
subfinder = "subfinder.run_gevent:run"
subutils = "subfinder.utils:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.autopep8]
max_line_length = 120
