[tool.poetry]
name = "subfinder"
version = "2.1.0"
description = "subfinder -- a general finder for subtitles"
authors = ["ausaki <ljm51689@gmail.com>"]
repository = "https://github.com/ausaki/subfinder/"
readme = "README.md"
keywords = ["subtitle", "subfinder", "shooter", "zimuku"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.0"
requests = "*"
lxml = "*"
rarfile = "*"
six = "*"
gevent = "^24.0.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
tox = "*"
twine = "*"
pyinstaller = "*"
autopep8 = "*"
rope = "*"
pytest = "*"

[tool.poetry.scripts]
subfinder = "subfinder.run_gevent:run"
subutils = "subfinder.utils:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
line_length = 120
